Made fetching of databases more resilient.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,7 @@
         "oneof",
         "opentelemetry",
         "otel",
+        "progressbar",
         "Typeflag",
         "useragent"
     ]
