--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,8 +2,12 @@
     "cSpell.words": [
         "Apiv",
         "ASNJSON",
+        "Bredband",
+        "contexthandler",
+        "DBASN",
         "diskv",
         "envconfig",
+        "gddo",
         "geoip",
         "gonic",
         "httpserver",
@@ -11,14 +15,34 @@
         "IPJSON",
         "ISOJSON",
         "kelseyhightower",
+        "KHTML",
+        "kula",
+        "Linköping",
+        "lithammer",
         "maxmind",
         "mileusna",
+        "MIMEHTML",
+        "MIMEJSON",
+        "mmdb",
         "netaddr",
         "oneof",
         "opentelemetry",
+        "oschwald",
         "otel",
+        "otlp",
+        "otlptrace",
+        "otlptracehttp",
+        "peterbourgon",
         "progressbar",
+        "schollz",
+        "sdktrace",
+        "semconv",
+        "shortuuid",
+        "stretchr",
+        "tmpl",
         "Typeflag",
-        "useragent"
+        "useragent",
+        "webbrowser",
+        "webp"
     ]
 }
