Remove ladok error, and its package.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,11 +21,13 @@
         "Linköping",
         "lithammer",
         "logr",
+        "masv",
         "maxmind",
         "mileusna",
         "MIMEHTML",
         "MIMEJSON",
         "mmdb",
+        "moogar",
         "netaddr",
         "oneof",
         "opentelemetry",
